--- a/themes/Portio/layouts/partials/hero.html
+++ b/themes/Portio/layouts/partials/hero.html
@@ -11,7 +11,7 @@
   </div>
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <div class="hero_content">
           <div class="hero_blob">
             <svg viewBox="0 0 550 550">
@@ -31,21 +31,24 @@
             <span class="top-title pre-line">{{ .topTitle }}</span>
             {{ .content | markdownify }}
           </div>
+          {{ if .buttonName }}
           <a type="button" class="btn btn-lg btn-primary btn-zoom"
             href="{{ .buttonURL | absURL }}">{{ .buttonName }}</a>
+          {{ end }}
         </div>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-8">
         <div class="hero_figure">
           <div class="figure-svg">
             <img src="images/hero/figure-svg.svg" alt="figure-svg" />
           </div>
-          <img src="{{ .image | absURL }}" alt="hero-image" style='
+          <img src="{{ .image | absURL }}" alt="hero-image" style="border-radius: 10px;"/>
+          <!-- style='
                   -webkit-mask: url({{"images/hero/hero-mask-svg.png" | absURL }});
                   -webkit-mask-repeat: no-repeat;
                   -webkit-mask-size: contain;
                   -webkit-mask-position: center center;
-                ' />
+                ' /> -->
 
           {{ if .videoURL }}
           <div class="hero_figure-popup">
