--- a/themes/Portio/layouts/partials/footer.html
+++ b/themes/Portio/layouts/partials/footer.html
@@ -23,12 +23,11 @@
 						</svg>
 					</div>
 					<div class="text-light footer__cta_content">
-						<span>Contact me</span>
-						<h2 class="mb-0">Let’s Start a Project</h2>
+						<span>Download Now and</span>
+						<h2 class="mb-0">Let’s Start Timely</h2>
 					</div>
 					<div class="footer__cta_action">
-						<a class="btn btn-light btn-zoom" href="{{ .Site.Params.contactLink | absURL }}">Get in
-							touch</a>
+						<a class="btn btn-light btn-zoom" href="{{ .Site.Params.contactLink | absURL }}">Getting Started</a>
 					</div>
 				</div>
 			</div>
@@ -37,9 +36,10 @@
 			<div class="col-lg-4">
 				<div class="footer__widget_logo mb-5">
 					<h3 class="text-light base-font">
-						<img src="{{ .Site.Params.footerLogo | absURL }}" alt="widget-logo" width="32">
+						<img src="{{ .Site.Params.footerLogo | absURL }}" alt="widget-logo" width="32" />
 						{{ .Site.Params.footerLogoLabel }}
 					</h3>
+					<a href="#"><img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="appstore-doanload"/></a>
 				</div>
 			</div>
 			<div class="col-lg-4">
